--- a/app/src/main/res/layout/activity_slide2_land.xml
+++ b/app/src/main/res/layout/activity_slide2_land.xml
@@ -15,45 +15,49 @@
 
         <!-- Adicione aqui os elementos do seu layout -->
         <ImageView
-            android:layout_width="255dp"
-            android:layout_height="245dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="58dp"
-            android:layout_marginBottom="55dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
             android:src="@drawable/logo" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="25sp"
+            android:textSize="18sp"
             android:text="Nesta aplicação vais poder "
             android:textColor="@android:color/black"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="8dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="agendar e rever as suas"
-            android:textSize="25sp"
+            android:textSize="18sp"
             android:textColor="@android:color/black"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="8dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="25sp"
+            android:textSize="18sp"
             android:text="queimadas e comunicar com a"
             android:textColor="@android:color/black"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="8dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="sua Câmara Municipal"
-            android:textSize="25sp"
+            android:textSize="18sp"
             android:textColor="@android:color/black"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="135dp"/>
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="16dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -61,19 +65,19 @@
             android:orientation="horizontal"
             android:gravity="center">
 
+            <!-- Bola preta -->
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/ball_white"
                 android:layout_margin="20dp"/>
 
-            <!-- Bola preta -->
+            <!-- Bola cinza 1 -->
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/ball_black"
                 android:layout_margin="20dp"/>
-
 
             <!-- Bola cinza 2 -->
             <ImageView
@@ -83,10 +87,6 @@
                 android:layout_margin="20dp"/>
         </LinearLayout>
 
-
-
-
     </LinearLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
