--- a/app/src/main/res/layout/activity_slide3_land.xml
+++ b/app/src/main/res/layout/activity_slide3_land.xml
@@ -10,25 +10,25 @@
         android:layout_height="match_parent"
         android:background="@drawable/background_linear"
         android:orientation="vertical"
+        android:gravity="center"
         tools:layout_editor_absoluteX="121dp"
         tools:layout_editor_absoluteY="-79dp">
 
         <!-- Adicione aqui os elementos do seu layout -->
         <ImageView
-            android:layout_width="255dp"
-            android:layout_height="245dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="38dp"
-            android:layout_marginBottom="35dp"
+            android:layout_width="150dp"
+            android:layout_height="90dp"
+            android:layout_marginTop="35dp"
+            android:layout_marginBottom="1dp"
             android:src="@drawable/logo" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
-            android:text="Em caso de incendio ou perda do "
+            android:text="Em caso de incêndio ou perda de"
             android:textColor="@android:color/black"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_marginBottom="15dp"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -36,7 +36,7 @@
             android:text="controlo da queimada, por favor,"
             android:textSize="25sp"
             android:textColor="@android:color/black"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_marginBottom="15dp"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -44,16 +44,12 @@
             android:text="contacte as autoridades"
             android:textSize="25sp"
             android:textColor="@android:color/black"
-            android:layout_gravity="center_horizontal"
             android:layout_marginBottom="45dp"/>
 
         <Button
             android:id="@+id/button1"
             android:layout_width="200dp"
             android:layout_height="60dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginBottom="15dp"
             android:drawableEnd="@drawable/seta"
             android:drawablePadding="8dp"
@@ -66,9 +62,6 @@
             android:id="@+id/button2"
             android:layout_width="200dp"
             android:layout_height="60dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginBottom="50dp"
             android:background="@drawable/button_background2"
             android:drawableEnd="@drawable/seta"
