--- a/app/src/main/res/layout/activity_slide1_land.xml
+++ b/app/src/main/res/layout/activity_slide1_land.xml
@@ -67,6 +67,7 @@
             app:layout_constraintStart_toStartOf="parent"/>
 
         <LinearLayout
+            android:id="@+id/linearLayoutBalls"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
