--- a/app/src/main/res/layout/activity_home_page_user.xml
+++ b/app/src/main/res/layout/activity_home_page_user.xml
@@ -64,29 +64,15 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <!-- List of Items -->
-        <ScrollView
-            android:id="@+id/scroll_view"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_queimadas"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_above="@id/bottom_navigation"
-            android:layout_below="@id/header"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/header"
             app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:padding="16dp">
-
-            <TextView
-                android:id="@+id/queimada_info"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/greeting_message"
-                android:layout_marginTop="8dp"
-                android:layout_marginStart="16dp"
-                android:text=""/>
-
-            <!-- Conteúdo do ScrollView vai aqui -->
-        </ScrollView>
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <!-- Bottom Navigation -->
         <RelativeLayout
