--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -12,6 +12,5 @@
         android:id="@+id/nav_divider"
         android:title=""
         android:enabled="false"
-        android:orderInCategory="999"
-        android:icon="@drawable/divider" />
+        android:orderInCategory="999" />
 </menu>
