--- a/app/src/main/res/layout/activity_solicitaraprovacao.xml
+++ b/app/src/main/res/layout/activity_solicitaraprovacao.xml
@@ -112,13 +112,11 @@
                     android:textSize="18sp"
                     android:layout_marginBottom="8dp"/>
 
-                <EditText
+                <CalendarView
                     android:id="@+id/dataEditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/dataTextView"
-                    android:layout_marginTop="8dp"
-                    android:hint="Digite a data de realização" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
             </RelativeLayout>
 
             <!-- Motivo -->
@@ -152,6 +150,7 @@
                 android:text="Solicitar Aprovação"
                 android:layout_marginTop="16dp"
                 android:layout_gravity="center_horizontal"/>
+
         </LinearLayout>
     </ScrollView>
 
