--- a/app/src/main/res/layout/activity_solicitaraprovacao.xml
+++ b/app/src/main/res/layout/activity_solicitaraprovacao.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -89,13 +88,12 @@
                     android:textSize="18sp"
                     android:layout_marginBottom="8dp"/>
 
-                <EditText
-                    android:id="@+id/tipoEditText"
+                <Spinner
+                    android:id="@+id/tipoSpinner"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/tipoTextView"
-                    android:layout_marginTop="8dp"
-                    android:hint="Digite o tipo" />
+                    android:background="@drawable/spinner_background"
+                    android:layout_below="@id/tipoTextView"/>
             </RelativeLayout>
 
             <!-- Data De Realização -->
@@ -116,7 +114,6 @@
                     android:id="@+id/dataEditText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
-
             </RelativeLayout>
 
             <!-- Motivo -->
