Added DropBox to Types Defined by Admins

--- a/app/src/main/res/layout/activity_solicitaraprovacao.xml
+++ b/app/src/main/res/layout/activity_solicitaraprovacao.xml
@@ -71,10 +71,10 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/coordenadasTextView"
                     android:layout_marginTop="8dp"
-                    android:hint="Digite as coordenadas" />
+                    android:hint="Digite as coordenadas"
+                    android:minHeight="48dp" />
             </RelativeLayout>
 
-            <!-- Tipo -->
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -90,10 +90,12 @@
 
                 <Spinner
                     android:id="@+id/tipoSpinner"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/spinner_background"
-                    android:layout_below="@id/tipoTextView"/>
+                    android:layout_below="@id/tipoTextView"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginTop="8dp"
+                    android:minHeight="48dp" />
             </RelativeLayout>
 
             <!-- Data De Realização -->
@@ -135,8 +137,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/motivoTextView"
-                    android:layout_marginTop="8dp"
-                    android:hint="Digite o motivo" />
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="13dp"
+                    android:layout_marginTop="29dp"
+                    android:hint="Digite o motivo"
+                    android:minHeight="48dp" />
             </RelativeLayout>
 
             <!-- Botão "Solicitar Aprovação" -->
