--- a/app/src/main/res/layout/activity_notificacoes_user.xml
+++ b/app/src/main/res/layout/activity_notificacoes_user.xml
@@ -45,6 +45,18 @@
                 android:src="@drawable/menu"/>
         </RelativeLayout>
 
+        <!-- List of Items -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_queimadas"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="110dp"
+            android:layout_marginBottom="90dp"
+            app:layout_constraintTop_toBottomOf="@id/header"
+            app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
         <!-- Bottom Navigation -->
         <RelativeLayout
             android:id="@+id/bottom_navigation"
