--- a/app/src/main/res/layout/activity_create_user.xml
+++ b/app/src/main/res/layout/activity_create_user.xml
@@ -2,31 +2,55 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:gravity="center"
+    android:background="@drawable/background_linear">
 
+    <!-- Logotipo -->
+    <ImageView
+        android:layout_width="311dp"
+        android:layout_height="314dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="24dp"
+        android:src="@drawable/logo" />
+
+    <!-- EditTexts -->
     <EditText
         android:id="@+id/editTextName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Nome" />
+        android:layout_marginBottom="12dp"
+        android:padding="10dp"
+        android:hint="Nome"
+        android:textColor="@android:color/white" />
 
     <EditText
         android:id="@+id/editTextEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:padding="10dp"
         android:hint="Email"
-        android:inputType="textEmailAddress" />
+        android:inputType="textEmailAddress"
+        android:textColor="@android:color/white" />
 
     <EditText
         android:id="@+id/editTextPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:padding="10dp"
         android:hint="Senha"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:textColor="@android:color/white" />
 
     <Button
         android:id="@+id/buttonCreateUser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Criar Utilizador" />
+        android:text="Criar Utilizador"
+        android:background="@drawable/button_background"
+        android:textColor="@android:color/white"
+        android:textAllCaps="false" />
+
 </LinearLayout>
