--- a/app/src/main/res/layout/activity_edit_user.xml
+++ b/app/src/main/res/layout/activity_edit_user.xml
@@ -3,8 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@drawable/background_linear">
 
+    <!-- Logotipo -->
+    <ImageView
+        android:layout_width="292dp"
+        android:layout_height="322dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="24dp"
+        android:src="@drawable/logo" />
+
+    <!-- EditTexts -->
     <EditText
         android:id="@+id/editTextEmail"
         android:layout_width="match_parent"
@@ -35,4 +45,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Save" />
+
 </LinearLayout>
