--- a/app/src/main/res/layout/activity_create_user.xml
+++ b/app/src/main/res/layout/activity_create_user.xml
@@ -1,17 +1,16 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:padding="16dp"
-    android:gravity="center"
     android:background="@drawable/background_linear">
 
     <!-- Logotipo -->
     <ImageView
+        android:id="@+id/imageViewLogo"
         android:layout_width="311dp"
         android:layout_height="314dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="24dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="32dp"
         android:src="@drawable/logo" />
 
     <!-- EditTexts -->
@@ -19,7 +18,8 @@
         android:id="@+id/editTextName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
+        android:layout_below="@id/imageViewLogo"
+        android:layout_marginTop="24dp"
         android:padding="10dp"
         android:hint="Nome"
         android:textColor="@android:color/white" />
@@ -28,7 +28,8 @@
         android:id="@+id/editTextEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
+        android:layout_below="@id/editTextName"
+        android:layout_marginTop="12dp"
         android:padding="10dp"
         android:hint="Email"
         android:inputType="textEmailAddress"
@@ -38,7 +39,8 @@
         android:id="@+id/editTextPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
+        android:layout_below="@id/editTextEmail"
+        android:layout_marginTop="12dp"
         android:padding="10dp"
         android:hint="Senha"
         android:inputType="textPassword"
@@ -48,9 +50,22 @@
         android:id="@+id/buttonCreateUser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/editTextPassword"
+        android:layout_marginTop="24dp"
         android:text="Criar Utilizador"
         android:background="@drawable/button_background"
         android:textColor="@android:color/white"
         android:textAllCaps="false" />
 
-</LinearLayout>
+    <!-- Setinha no canto superior esquerdo -->
+    <ImageView
+        android:id="@+id/imageViewBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:src="@drawable/setaback"
+        android:contentDescription="Voltar"
+        android:onClick="goToHomePageAdmin" />
+
+</RelativeLayout>
