--- a/app/src/main/res/drawable/background_linear.xml
+++ b/app/src/main/res/drawable/background_linear.xml
@@ -4,4 +4,5 @@
         android:startColor="#FF384A"
         android:endColor="#F2A040"
         android:angle="90"/>
+    <corners android:radius="15dp" />
 </shape>
