--- a/app/src/main/res/layout/activity_solicitaraprovacao.xml
+++ b/app/src/main/res/layout/activity_solicitaraprovacao.xml
@@ -112,10 +112,18 @@
                     android:textSize="18sp"
                     android:layout_marginBottom="8dp"/>
 
-                <CalendarView
-                    android:id="@+id/dataEditText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                <EditText
+                    android:id="@+id/datarealizacao"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/dataTextView"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="40dp"
+                    android:hint="Digite a data que pretende realizar"
+                    android:drawableEnd="@drawable/calendario"
+                    android:focusable="false"
+                    android:minHeight="48dp" />
             </RelativeLayout>
 
             <!-- Motivo -->
@@ -138,8 +146,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/motivoTextView"
                     android:layout_alignParentStart="true"
-                    android:layout_marginStart="13dp"
-                    android:layout_marginTop="29dp"
+                    android:layout_marginTop="5dp"
                     android:hint="Digite o motivo"
                     android:minHeight="48dp" />
             </RelativeLayout>
